--- a/sass/style.sass
+++ b/sass/style.sass
@@ -125,6 +125,13 @@ body
     bottom: 2.85rem
     left: -6rem
 
+#result-roll
+  padding: 1rem
+  font-size: 1.2em
+  text-align: center
+  & h3 span, p span
+    color: colors.$lizardGradient
+
 .rules
   a
     display: grid
