--- a/sass/colors.sass
+++ b/sass/colors.sass
@@ -1,8 +1,8 @@
-$scissorsGradient: hsl(39, 89, 49)
-$paperGradient: hsl(230, 89, 62)
-$rockGradient: hsl(349, 71, 52)
-$lizardGradient: hsl(261, 73, 60)
-$cyan: hsl(189, 59, 53)
+$scissorsGradient: hsl(39, 89%, 49%)
+$paperGradient: hsl(230, 89%, 62%)
+$rockGradient: hsl(349, 71%, 52%)
+$lizardGradient: hsl(261, 73%, 60%)
+$cyan: hsl(189, 59%, 53%)
 
 $darkText: hsl(229, 25%, 31%)
 $scoreText: hsl(229, 64%, 46%)
