--- a/sass/style.sass
+++ b/sass/style.sass
@@ -106,7 +106,7 @@ body
 
 .reta
   position: absolute
-  z-index: -1
+  z-index: -3
   border-top: 9rem solid colors.$darkText
   border-left: 8rem solid transparent
   border-right: 8rem solid transparent
@@ -129,6 +129,7 @@ body
   padding: 1rem
   font-size: 1.2em
   text-align: center
+  color: colors.$paperGradient
   & h3 span, p span
     color: colors.$lizardGradient
 
