--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ body {
 
 .reta {
   position: absolute;
-  z-index: -1;
+  z-index: -3;
   border-top: 9rem solid #3b4363;
   border-left: 8rem solid transparent;
   border-right: 8rem solid transparent;
@@ -137,6 +137,7 @@ body {
   padding: 1rem;
   font-size: 1.2em;
   text-align: center;
+  color: #4865f4;
 }
 #result-roll h3 span, #result-roll p span {
   color: #834fe3;
